--- a/Public/home.html
+++ b/Public/home.html
@@ -10,33 +10,62 @@
  <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
 </head>
 <body>
-    <form method="post" action = "" class="form-inline" id = "x" enctype = "application/json">
-        <div class="form-group">
-            <label class="sr-only" for="videoName">Enter song name:</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="videoName" placeholder="Enter" name = "name">
+    <div class = "container-fluid">
+        <div class = "row">
+            <div class="col-md-12">
+                <nav class="navbar navbar-default" id ="target"></nav>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary" id = "other">Play</button>
-    </form>
-    <div id="target"></div> 
-    <iframe id="player" type="text/html" width="640" height="390" frameborder="0" allowscriptaccess="always"></iframe>
-    <button id = "btn" type="button" class="btn btn-default" onclick = "addToPlaylist()">
-        <span class="glyphicon glyphicon-plus"></span>
-    </button>
-    <a id="stop" href="#"><strong>PAUSE</strong></a>
-    <a id="play" href="#"><strong>PLAY</strong></a>
-    <button id = "btn2" type="button" class="btn btn-default" onclick = "addToCommonPlaylist()">
-        <span class="glyphicon glyphicon-plus"></span>
-    </button>
-    <button id = 'join' type = "button" onclick = "join()">Connect</button>
-    <div id = "list" class = "playlist"></div>
-    <div id = "list2" class = "commonPlaylist">
-    </div>
-    <div> <ul id="messages"></ul>
-    <form action="" id = "y">
-      <input id="m" autocomplete="off" /><button id = "b">Send</button>
-    </form></div>
+        <div class = "row">
+            <div class = "col-md-8">
+            <form method="post" action = "" class="form-inline" id = "x" enctype = "application/json">
+                <div class="form-group">
+                    <label class="sr-only" for="videoName">Enter song name:</label>
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="videoName" placeholder="Enter" name = "name">
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary" id = "other">Play</button>
+            </form>
+            </div>
+        </div>
+        <div class = "row">
+            <div class="col-md-8">
+                <div class="jumbotron"> 
+                    <iframe id="player" type="text/html" width="640" height="390" frameborder="0" allowscriptaccess="always"></iframe>
+                    <div class = "pull-right">
+                        <button id = "btn" type="button" class="btn btn-default" onclick = "addToPlaylist()">
+                            <span class="glyphicon glyphicon-plus"></span>
+                        </button>
+                        <a id="stop" href="#"><strong>PAUSE</strong></a>
+                        <a id="play" href="#"><strong>PLAY</strong></a>
+                    </div>
+                    <button id = "btn2" type="button" class="btn btn-default" onclick = "addToCommonPlaylist()">
+                        <span class="glyphicon glyphicon-plus"></span>
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-4 x">
+            <div class="">
+                    <div id = "list" class = "playlist"></div>
+                </div>
+                <!--/sidebar-nav-fixed -->
+            </div>
+            </div>
+            <div class ="row">
+                <div class = "col-md-8">
+                    <textarea id="workspace" rows=1 columns = 4></textarea>
+                    <button id = 'join' type = "button" onclick = "join()" class="btn btn-default">Connect</button>
+                <div id = "list2" class = "commonPlaylist"></div>
+                </div>
+                <div class = "col-md-4"> 
+                    <ul id="messages"></ul>
+                    <form action="" id = "y">
+                    <input id="m" autocomplete="off" /><button id = "b">Send</button>
+                </form>
+                </div>
+            </div>
+        </div>
     
 
     <script>
@@ -108,6 +137,10 @@
             $("#list2").append('<button type="button" id="' + data + '" class = "btn btn-primary btn-block" onclick="play_common_playlist_song(event)">' +data+ '</button><br />');
         });
 
+        socket.on('message', function(data) {
+            console.log(data);
+        });
+
         $('#x').submit(function(event) {
             event.preventDefault();
             var searchQuery = document.getElementById('videoName').value;
@@ -134,7 +167,12 @@
         });
 
         function join() {
-            soc
+            var workspace = document.getElementById("workspace").value;
+            console.log(workspace);
+            $.get('/workspace/'+workspace, function(data) {
+
+            });
+            //socket.emit('connectUsersToWorksapce', workspace);
         }
 
         function userDatabase() {
