--- a/Public/finaltry.html
+++ b/Public/finaltry.html
@@ -226,7 +226,7 @@
             console.log(room);
             var disp = alert("Conncetion Succesful");
             alert(disp);
-            $('#target').text("Current Workspace : "+room+"    __________________________    "+"User : "+user);
+            $('#target').text("Current Workspace : "+room);
 
             
    // Connected, let's sign-up for to receive messages for this room
