changed login page

--- a/Public/finaltry.html
+++ b/Public/finaltry.html
@@ -224,8 +224,7 @@
             room = document.getElementById("connect").value;
             console.log("in join");
             console.log(room);
-            var disp = alert("Conncetion Succesful");
-            alert(disp);
+            //var disp = alert("Conncetion Succesful");
             $('#target').text("Current Workspace : "+room);
 
             
