--- a/Public/finaltry.html
+++ b/Public/finaltry.html
@@ -1,3 +1,4 @@
+<html>
 <head>
     <!--<link rel="stylesheet" href="jquery.ui.core.css" type="text/css" media="screen" />
     <script type="text/javascript" src="jquery-1.4.2.js"></script>
